--- a/thaoln87/index.html
+++ b/thaoln87/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Practice D3</title>
+
 </head>
-<body>
+<body ng-app="myApp">
     <!--<svg width="500" height="500">-->
         <!--<polygon points="100, 120, 280, 320, 140, 40" fill="purple"></polygon>-->
         <!--<rect x="10" y="10" width="100" height="50" fill="blue" />-->
@@ -13,8 +14,11 @@
         <!--<text x="240" y="200" text-anchor="middle">SVG</text>-->
         <!--<line x1="100" y1="120" x2="200" y2="100" stroke-width="9" stroke="green" />-->
     <!--</svg>-->
-<script src="d3/d3.min.js"></script>
-<script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
-<script src="scripts/axisData.js"></script>
+    <elastic-circle-chart></elastic-circle-chart>
+    <elastic-circle-chart></elastic-circle-chart>
+    <script src="d3/d3.min.js"></script>
+    <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
+    <script src="scripts/axisData.js"></script>
 </body>
 </html>
