App angularjs to make donut chart directive

--- a/thaoln87/indexDonut.html
+++ b/thaoln87/indexDonut.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>D3 Donut Chart</title>
 </head>
-<body>
+<body ng-app="myApp">
+<donut-chart></donut-chart>
 <script src="d3/d3.min.js"></script>
 <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
 <script src="scripts/donut.js"></script>
 </body>
 </html>
