--- a/thaoln87/indexDonut.html
+++ b/thaoln87/indexDonut.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <title>D3 Donut Chart</title>
 </head>
-<body ng-app="myApp" ng-init="chart=[10,20,30]">
-<input type="range" ng-model="chart[0]" > <br/>
-<input type="range" ng-model="chart[1]" > <br/>
-<input type="range" ng-model="chart[2]" > <br/>
-<donut-chart data="chart"></donut-chart>
+<body ng-app="myApp" ng-controller="MainCtrl">
+<donut-chart data="data"></donut-chart>
 <script src="d3/d3.min.js"></script>
 <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
