Add new controller to use Angular way for reading data from file

--- a/thaoln87/indexDonut.html
+++ b/thaoln87/indexDonut.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>D3 Donut Chart</title>
 </head>
-<body ng-app="myApp" ng-controller="MainCtrl">
+<body ng-app="myApp" ng-controller="MainCtrlNg">
 <donut-chart data="data"></donut-chart>
 <script src="d3/d3.min.js"></script>
 <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
