Insert todo record

--- a/thaoln87/indexedDBDemo.html
+++ b/thaoln87/indexedDBDemo.html
@@ -7,7 +7,7 @@
 <body>
 <h1>To-do list</h1>
 <form>
-    <input placeholder="Type something" />
+    <input id="todo_text" placeholder="Type something" />
 </form>
 <ul>
 </ul>
