--- a/thaoln87/indexedDBDemo.html
+++ b/thaoln87/indexedDBDemo.html
@@ -9,7 +9,7 @@
 <form>
     <input id="todo_text" placeholder="Type something" />
 </form>
-<ul>
+<ul id="todo_list">
 </ul>
 <script src="scripts/todo-list/application.js"></script>
 </body>
