Add comment for draw axis code

--- a/Line Chart/line-chart-index.html
+++ b/Line Chart/line-chart-index.html
@@ -114,6 +114,7 @@
         }).curve(d3.curveNatural);
 
     function plot(params) {
+        // Draw the axis
         this.append("g")
             .classed("x axis", true)
             .attr("transform", "translate(0," + height + ")")
