--- a/thaoln87/indexedDBDemo.html
+++ b/thaoln87/indexedDBDemo.html
@@ -3,6 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>IndexedDB Demo</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 50px;
+            font-family: helvetica, sans-serif;
+            color: dimgray;
+        }
+
+        #todo_text {
+            width: 100%;
+            font-size: large;
+            padding: 5px;
+        }
+
+        ul#todo_list {
+            margin-top: 30px;
+            padding: 0;
+            list-style: none;
+        }
+
+        ul#todo_list li {
+            padding: 20px;
+            border-bottom: solid 1px #a9a9a9;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <h1>To-do list</h1>
