--- a/thaoln87/indexedDBDemo.html
+++ b/thaoln87/indexedDBDemo.html
@@ -28,6 +28,18 @@
             border-bottom: solid 1px #a9a9a9;
             cursor: pointer;
         }
+
+        .memoAt {
+            margin-top: 30px;
+            color: crimson;
+            font-size: medium;
+        }
+
+        .memo{
+            padding: 20px;
+            background-color: aliceblue;
+            color: coral;
+        }
     </style>
 </head>
 <body>
@@ -37,6 +49,8 @@
 </form>
 <ul id="todo_list">
 </ul>
+<div id="detail">
+</div>
 <script src="scripts/todo-list/application.js"></script>
 </body>
 </html>
