Add search by memo's content feature (only search starts with and case sensitive)

--- a/thaoln87/indexedDBDemo.html
+++ b/thaoln87/indexedDBDemo.html
@@ -12,7 +12,7 @@
         }
 
         #todo_text {
-            width: 100%;
+            width: 90%;
             font-size: large;
             padding: 5px;
         }
@@ -45,7 +45,7 @@
 <body>
 <h1>To-do list</h1>
 <form>
-    <input id="todo_text" placeholder="Type something" />
+    <input id="todo_text" placeholder="Type something" /> <input type="button" id="searchBtn" value="Search"/>
 </form>
 <ul id="todo_list">
 </ul>
