Extract operations on database to databaseService.js file

--- a/thaoln87/indexedDBDemo.html
+++ b/thaoln87/indexedDBDemo.html
@@ -51,6 +51,7 @@
 </ul>
 <div id="detail">
 </div>
+<script src="scripts/todo-list/databaseService.js"></script>
 <script src="scripts/todo-list/application.js"></script>
 </body>
 </html>
