Create Observable by click event and using XmlHttpRequest to read data

--- a/RxJSDemo/index.html
+++ b/RxJSDemo/index.html
@@ -5,6 +5,8 @@
     <title>Hello RxJS</title>
 </head>
 <body>
+<input type="button" value="Get Movies" id="getBtn" />
+<div id="output"></div>
 <script src="app.js"></script>
 </body>
 </html>
