Correct require usage

--- a/Swagger-codegen-javascript/src/index.html
+++ b/Swagger-codegen-javascript/src/index.html
@@ -7,14 +7,20 @@
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.js"></script>
 <script>
-    var petstore = require(['index']);
-    var apiInstance = new SwaggerPetstore.PetApi();
-    apiInstance.findPetsByStatus("available", function(error, data, response) {
+    require(['index'], function(SwaggerPetstore) {
+        var apiInstance = new SwaggerPetstore.PetApi();
+        apiInstance.findPetsByStatus(["available"], function(error, data, response) {
             if (error) {
                 console.error(error);
             } else {
-                console.log('API called successfully. Returned data: ' + data);
+                console.log('API called successfully. Returned data: ');
+                console.log(JSON.stringify(data));
+//                data.forEach(function(pet){
+//                    console.log(pet.name + ', ' + pet.category.name);
+//                });
+
             }
+        });
     });
 </script>
 </body>
